upload fix centers

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ DIMK
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column00">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="margin:5px 5px 30px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(52,52,52,1);">BEST </span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(251,114,78,1);">S</span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(52,52,52,1);">OFTWARE SOLUTIONS</span></p><p style="margin:5px 5px 30px 0px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/145.jpg" /></span></span></p></div>
+<div class="html_content"><p style="margin:5px 5px 30px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(52,52,52,1);">BEST </span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(251,114,78,1);">S</span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(52,52,52,1);">OFTWARE SOLUTIONS</span></p><p style="margin:5px 5px 30px 0px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/56.jpg" /></span></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -100,7 +100,7 @@ DIMK
 <div class="post_column col-xl-5 col-lg-5 col-md-6 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column20">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:427px;max-width:640px;" src="images/152.jpg" /></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:427px;max-width:640px;" src="images/63.jpg" /></span></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -120,7 +120,7 @@ DIMK
 <div class="post_column col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column30">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="margin:5px 5px 0px 5px;text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/153.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">CREATIVE DESIGN</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">Qt5 is the main GUI widget framework i use in all GUI projects...</span></p></span></p></div>
+<div class="html_content"><p style="text-indent:0px;margin:5px 0px 5px 0px;text-align:Center;line-height:1em;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="margin:5px 5px 0px 5px;text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/64.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">CREATIVE DESIGN</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">Qt5 is the main GUI widget framework i use in all GUI projects...</span></p></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -129,7 +129,7 @@ DIMK
 <div class="post_column col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column31">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="margin:0px 5px 5px 5px;text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/154.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">UNIQUE IDEAS</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">I have excellent ideas for your GUI design.</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">Qt5 Designer is my heavy tool for designing the UI of your application...</span></p></span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="margin:0px 5px 5px 5px;text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/65.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">UNIQUE IDEAS</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">I have excellent ideas for your GUI design.</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">Qt5 Designer is my heavy tool for designing the UI of your application...</span></p></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -138,7 +138,7 @@ DIMK
 <div class="post_column col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column32">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/155.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">DEVELOPING </span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">I love to code in Python with PyQt5. I can finish your software project in a couple of days and it will be excactly as you like it...</span></p></span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span style="text-align:Center;"><img class="ttr_uniform" style="max-height:60px;max-width:60px;margin:0px 0px 40px 0px;" src="images/66.png" /></span><p style="margin:5px 5px 20px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.286em;color:rgba(52,52,52,1);">DEVELOPING </span></p><p style="margin:5px 5px 20px 5px;text-align:Center;line-height:2em;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">I love to code in Python with PyQt5. I can finish your software project in a couple of days and it will be excactly as you like it...</span></p></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -149,7 +149,7 @@ DIMK
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column40">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="margin:0px 5px 30px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.214em;color:rgba(255,255,255,1);">All you need is a nice UI</span></p><p style="margin:0px 5px 30px 0px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:100px;" src="images/156.jpg" /></span></span></p></div>
+<div class="html_content"><p style="margin:0px 5px 30px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.214em;color:rgba(255,255,255,1);">All you need is a nice UI</span></p><p style="margin:0px 5px 30px 0px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:100px;" src="images/67.jpg" /></span></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -178,7 +178,7 @@ DIMK
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column50">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="margin:0px 5px 30px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">MY </span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(251,114,78,1);">W</span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">ORK</span></p><p style="margin:0px 5px 30px 5px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/1451.jpg" /></span></span></p></div>
+<div class="html_content"><p style="margin:0px 5px 30px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">MY </span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;color:rgba(251,114,78,1);">W</span><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">ORK</span></p><p style="margin:0px 5px 30px 5px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/561.jpg" /></span></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -256,7 +256,7 @@ DIMK
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="ttr_home_html_column80">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.714em;">HAVE YOU ALREADY LIKE MY WORKS? </span></p><p style="text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.714em;">WANT TO SEE FULL PORTFOLIO?</span></p><p style="text-align:Center;"><span><a href="https://github.com/demosthenesk" target="_blank" class="btn btn-md btn-default">VIEW PORTFOLIO</a></span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:1.714em;">HAVE YOU ALREADY LIKE MY WORKS? WANT TO SEE FULL PORTFOLIO?</span></p><p style="text-align:Center;"><span><a href="https://github.com/demosthenesk" target="_blank" class="btn btn-md btn-default">VIEW PORTFOLIO</a></span></p></div>
 <div class="margin_collapsetop"></div>
 <div style="clear:both;width:0px;"></div>
 </div>
@@ -278,7 +278,7 @@ DIMK
 <div class="post_column col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 col-12">
 <div class="footercellcolumn1">
 <div class="margin_collapsetop"></div>
-<div class="html_content"><p style="margin:5px 5px 30px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">DIMK</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/1452.jpg" /></span></span></p><p style="margin:5px 5px 20px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">For an open source world</span></p><p style="margin:5px 5px 10px 5px;text-align:Center;"><a href="mailto:demosthenesk@gmail.com" target="_blank" class="tt_link"><span style="font-family:'Roboto','Arial';font-size:1.071em;color:rgba(52,52,52,1);">demosthenesk@gmail.com</span></a></p><p style="margin:5px 5px 20px 5px;text-align:Center;"><br style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(78,78,78,1);" /></p></div>
+<div class="html_content"><p style="margin:5px 5px 30px 5px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:500;font-size:2.143em;">DIMK</span></p><p style="margin:5px 5px 20px 5px;text-align:Center;"><span class="ttr_image" style="float:none;display:block;overflow:hidden;margin:0px 0px 0px 0px;"><span><img class="ttr_uniform" style="max-height:2px;max-width:125px;" src="images/562.jpg" /></span></span></p><p style="margin:5px 5px 20px 0px;text-align:Center;"><span style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(52,52,52,1);">For an open source world</span></p><p style="margin:5px 5px 10px 5px;text-align:Center;"><a href="mailto:demosthenesk@gmail.com" target="_blank" class="tt_link"><span style="font-family:'Roboto','Arial';font-size:1.071em;color:rgba(52,52,52,1);">demosthenesk@gmail.com</span></a></p><p style="margin:5px 5px 20px 5px;text-align:Center;"><br style="font-family:'Roboto','Arial';font-weight:300;font-size:1.071em;color:rgba(78,78,78,1);" /></p></div>
 <div class="margin_collapsetop"></div>
 </div>
 </div>
